@@ -3,6 +3,7 @@ context 'An Employee' do
   setup do
     class Employee
 
+      include DataMapper::CallbacksHelper
       include DataMapper::Validations::ValidationHelper
       
       attr_accessor :email
