@@ -2,7 +2,8 @@ context 'A Cow' do
   
   setup do
     class Cow
-
+      
+      include DataMapper::CallbacksHelper
       include DataMapper::Validations::ValidationHelper
       
       attr_accessor :name, :age
